--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "My Lab Journal"
 subtitle: "Business Data Science Basics"
-author: "Hrishabh Shetty"
+author: "Hrishabh Shetty 123"
 ---
 
 ![](assets/logo/TIE_logo.svg){width=80% fig-align="center"}
