--- a/index.qmd
+++ b/index.qmd
@@ -8,7 +8,7 @@ author: "Hrishabh Shetty 123"
 
 This is a template example for lab journaling. Students in the data science courses at the Institute of Entrepreneurship will use this template to learn R for business analytics. Students can replace this text as they wish.
 
-## How to use
+# How to use
 
 1. Accept the assignment and get your own github repo.
 
@@ -19,3 +19,14 @@ This is a template example for lab journaling. Students in the data science cour
 4. Change everything to make it your own.
 
 5. Make sure to render you website everytime before you want to upload changes
+
+```{r}
+#| eval: false
+numbers <- 1:1000
+
+# This will print the first 10 elements of the vector numbers
+numbers[1:10]
+
+# This will plot a histogram of 100 random elements of the vector numbers
+hist(sample(numbers, 100, replace = T))
+```
