--- a/content/01_journal/01_tidyverse.qmd
+++ b/content/01_journal/01_tidyverse.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Tidyverse"
-author: "Joschka Schwarz"
+author: "Hrishabh Shetty"
 ---
 
 ::: callout-note
@@ -81,7 +81,7 @@ salesByState_summarized_data%>%
 
 # Step 1 - Manipulate
 ```
-You can add more headers by adding more hashtags. These won't be put into the table of contents
+
 
 ### Sales By State and year
 ```{r, echo=FALSE, message=FALSE}
